feat: migrate to LombardiaAgent repository
- Update Docker image name to lombardia_region
- Remove frontend code (moved to separate repo)
- Update Azure VM to 20.199.66.239
- Update deployment directory to /home/azureuser/voilavoiceagent
- Add .env.example template
- Update CI/CD workflow for backend-only deployment

--- a/.dockerignore
+++ b/.dockerignore
@@ -40,6 +40,9 @@ extra/
 # Bridge connection folder (hosted separately on Azure)
 talkdeskbridge/
 
+# Frontend (moved to separate repository)
+info_frontend/
+
 # Build artifacts
 build/
 dist/
