--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -164,7 +164,7 @@ jobs:
             
             # Deploy updates
             echo "🚀 Deploying services..."
-            docker-compose up -d --no-deps
+            docker-compose up -d
             echo "✅ Deployment complete"
             
             # Wait for services to start
