--- a/nginx.conf
+++ b/nginx.conf
@@ -54,6 +54,23 @@ http {
             proxy_read_timeout 7d;
         }
 
+        # API endpoints for dashboard (HTTP REST)
+        location /api/ {
+            proxy_pass http://pipecat_backend;
+
+            # Standard proxy headers
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Timeouts for API requests
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+
         # Health check endpoint (returns 200 if nginx is up)
         location /health {
             access_log off;
